waf.tf
# resource "aws_wafv2_web_acl" "songs_cdn" {
#   provider = aws.us_east_1

#   name  = "${var.project_name}-songs-cdn-waf"
#   scope = "CLOUDFRONT"

#   default_action {
#     allow {}
#   }

#   rule {
#     name     = "AWSManagedRulesCommonRuleSet"
#     priority = 10

#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "${var.project_name}-common-rules"
#       sampled_requests_enabled   = true
#     }
#   }

#   rule {
#     name     = "AWSManagedRulesKnownBadInputsRuleSet"
#     priority = 20

#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesKnownBadInputsRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "${var.project_name}-known-bad-inputs"
#       sampled_requests_enabled   = true
#     }
#   }

#   rule {
#     name     = "RateLimitPerIp"
#     priority = 30

#     action {
#       block {}
#     }

#     statement {
#       rate_based_statement {
#         aggregate_key_type = "IP"
#         limit              = 2000
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "${var.project_name}-rate-limit"
#       sampled_requests_enabled   = true
#     }
#   }

#   visibility_config {
#     cloudwatch_metrics_enabled = true
#     metric_name                = "${var.project_name}-songs-cdn-waf"
#     sampled_requests_enabled   = true
#   }

#   tags = {
#     Name = "${var.project_name}-songs-cdn-waf"
#   }
# }
